[skip ci] 2790b5fa19bcd730752220c7ada2e0391422fd83 Clean up subcommand (#138)

--- a/html/genindex.html
+++ b/html/genindex.html
@@ -434,18 +434,20 @@
         <li><a href="API/luchador.util.render.html#luchador.util.render.Transform.enable">(luchador.util.render.Transform method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.agent.recorder.html#luchador.agent.recorder.EpisodeRecorder.enough_data">enough_data() (luchador.agent.recorder.EpisodeRecorder method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.command.exercise.html#luchador.command.exercise.entry_point">entry_point() (in module luchador.command.exercise)</a>
 
       <ul>
         <li><a href="API/luchador.command.main.html#luchador.command.main.entry_point">(in module luchador.command.main)</a>
 </li>
-        <li><a href="API/luchador.command.serve.html#luchador.command.serve.entry_point">(in module luchador.command.serve)</a>
-</li>
       </ul></li>
+      <li><a href="API/luchador.command.serve.html#luchador.command.serve.entry_point_env">entry_point_env() (in module luchador.command.serve)</a>
+</li>
+      <li><a href="API/luchador.command.serve.html#luchador.command.serve.entry_point_manager">entry_point_manager() (in module luchador.command.serve)</a>
+</li>
       <li><a href="API/luchador.agent.recorder.html#luchador.agent.recorder.EpisodeRecorder">EpisodeRecorder (class in luchador.agent.recorder)</a>
 </li>
       <li><a href="API/luchador.episode_runner.html#luchador.episode_runner.EpisodeRunner">EpisodeRunner (class in luchador.episode_runner)</a>
@@ -700,6 +702,8 @@
 </li>
       <li><a href="API/luchador.command.main.html#module-luchador.command.main">luchador.command.main (module)</a>
 </li>
+      <li><a href="API/luchador.command.parser.html#module-luchador.command.parser">luchador.command.parser (module)</a>
+</li>
       <li><a href="API/luchador.command.serve.html#module-luchador.command.serve">luchador.command.serve (module)</a>
 </li>
       <li><a href="API/luchador.configure.html#module-luchador.configure">luchador.configure (module)</a>
@@ -922,6 +926,8 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="API/luchador.command.parser.html#luchador.command.parser.parse_command_line_args">parse_command_line_args() (in module luchador.command.parser)</a>
+</li>
       <li><a href="API/luchador.agent.base.html#luchador.agent.base.BaseAgent.perform_post_episode_task">perform_post_episode_task() (luchador.agent.base.BaseAgent method)</a>
 
       <ul>
@@ -934,10 +940,10 @@
 </li>
       <li><a href="API/luchador.env.flappy_bird.fb_component.html#luchador.env.flappy_bird.fb_component.Pipes">Pipes (class in luchador.env.flappy_bird.fb_component)</a>
 </li>
-      <li><a href="API/luchador.env.flappy_bird.fb_component.html#luchador.env.flappy_bird.fb_component.Player">Player (class in luchador.env.flappy_bird.fb_component)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="API/luchador.env.flappy_bird.fb_component.html#luchador.env.flappy_bird.fb_component.Player">Player (class in luchador.env.flappy_bird.fb_component)</a>
+</li>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Point">Point (class in luchador.util.render)</a>
 </li>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Polygon">Polygon (class in luchador.util.render)</a>
