[skip ci] 7605c898865c2241d9bdbe6e417871cc7f817969 Compress NumPy Array state (#139)

--- a/html/genindex.html
+++ b/html/genindex.html
@@ -402,7 +402,7 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="API/luchador.env.base.html#luchador.env.base.deserialize_outcome">deserialize_outcome() (in module luchador.env.base)</a>
+      <li><a href="API/luchador.env.remote.util.html#luchador.env.remote.util.deserialize_outcome">deserialize_outcome() (in module luchador.env.remote.util)</a>
 </li>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Attribute.disable">disable() (luchador.util.render.Attribute method)</a>
 
@@ -740,6 +740,8 @@
 </li>
       <li><a href="API/luchador.env.remote.server.html#module-luchador.env.remote.server">luchador.env.remote.server (module)</a>
 </li>
+      <li><a href="API/luchador.env.remote.util.html#module-luchador.env.remote.util">luchador.env.remote.util (module)</a>
+</li>
       <li><a href="API/luchador.episode_runner.html#module-luchador.episode_runner">luchador.episode_runner (module)</a>
 </li>
       <li><a href="API/luchador.nn.html#module-luchador.nn">luchador.nn (module)</a>
@@ -1070,7 +1072,7 @@
         <li><a href="API/luchador.util.mixin.html#luchador.util.mixin.SerializeMixin.serialize">(luchador.util.mixin.SerializeMixin method)</a>
 </li>
       </ul></li>
-      <li><a href="API/luchador.env.base.html#luchador.env.base.serialize_outcome">serialize_outcome() (in module luchador.env.base)</a>
+      <li><a href="API/luchador.env.remote.util.html#luchador.env.remote.util.serialize_outcome">serialize_outcome() (in module luchador.env.remote.util)</a>
 </li>
       <li><a href="API/luchador.util.mixin.html#luchador.util.mixin.SerializeMixin">SerializeMixin (class in luchador.util.mixin)</a>
 </li>
