[skip ci] 17952488f5bf4960243ee2c7c4def2ec3e91b3be Add n_dim (#144)

--- a/html/genindex.html
+++ b/html/genindex.html
@@ -858,6 +858,8 @@
         <li><a href="API/luchador.env.remote.client.html#luchador.env.remote.client.RemoteEnv.n_actions">(luchador.env.remote.client.RemoteEnv attribute)</a>
 </li>
       </ul></li>
+      <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.BaseTensor.n_dim">n_dim (luchador.nn.base.wrapper.BaseTensor attribute)</a>
+</li>
       <li><a href="API/luchador.agent.recorder.html#luchador.agent.recorder.TransitionRecorder.n_records">n_records (luchador.agent.recorder.TransitionRecorder attribute)</a>
 </li>
       <li><a href="API/luchador.nn.tensorflow.scope.html#luchador.nn.tensorflow.scope.name_scope">name_scope() (in module luchador.nn.tensorflow.scope)</a>
@@ -1132,6 +1134,8 @@
         <li><a href="API/luchador.nn.theano.cost.html#luchador.nn.theano.cost.SigmoidCrossEntropy">(class in luchador.nn.theano.cost)</a>
 </li>
       </ul></li>
+      <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.BaseTensor.size">size (luchador.nn.base.wrapper.BaseTensor attribute)</a>
+</li>
       <li><a href="API/luchador.nn.tensorflow.layer.html#luchador.nn.tensorflow.layer.Softmax">Softmax (class in luchador.nn.tensorflow.layer)</a>
 
       <ul>
