[skip ci] 73e97612bfed8d782a47898a162dfc7b942b1885 Unify DQN Implementation (#151)

--- a/html/genindex.html
+++ b/html/genindex.html
@@ -240,8 +240,6 @@
 </li>
       <li><a href="API/luchador.nn.base.cost.html#luchador.nn.base.cost.BaseCost">BaseCost (class in luchador.nn.base.cost)</a>
 </li>
-      <li><a href="API/luchador.nn.base.q_learning.html#luchador.nn.base.q_learning.BaseDeepQLearning">BaseDeepQLearning (class in luchador.nn.base.q_learning)</a>
-</li>
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseDense">BaseDense (class in luchador.nn.base.layer)</a>
 </li>
       <li><a href="API/luchador.env.base.html#luchador.env.base.BaseEnvironment">BaseEnvironment (class in luchador.env.base)</a>
@@ -306,18 +304,14 @@
       </ul></li>
       <li><a href="API/luchador.agent.recorder.html#luchador.agent.recorder.Buffer">Buffer (class in luchador.agent.recorder)</a>
 </li>
-      <li><a href="API/luchador.nn.base.cost.html#luchador.nn.base.cost.BaseCost.build">build() (luchador.nn.base.cost.BaseCost method)</a>
+      <li><a href="API/luchador.agent.rl.q_learning.html#luchador.agent.rl.q_learning.DeepQLearning.build">build() (luchador.agent.rl.q_learning.DeepQLearning method)</a>
 
       <ul>
+        <li><a href="API/luchador.nn.base.cost.html#luchador.nn.base.cost.BaseCost.build">(luchador.nn.base.cost.BaseCost method)</a>
+</li>
         <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseLayer.build">(luchador.nn.base.layer.BaseLayer method)</a>
 </li>
-        <li><a href="API/luchador.nn.base.q_learning.html#luchador.nn.base.q_learning.BaseDeepQLearning.build">(luchador.nn.base.q_learning.BaseDeepQLearning method)</a>
-</li>
         <li><a href="API/luchador.nn.model.model.html#luchador.nn.model.model.Sequential.build">(luchador.nn.model.model.Sequential method)</a>
-</li>
-        <li><a href="API/luchador.nn.tensorflow.q_learning.html#luchador.nn.tensorflow.q_learning.DeepQLearning.build">(luchador.nn.tensorflow.q_learning.DeepQLearning method)</a>
-</li>
-        <li><a href="API/luchador.nn.theano.q_learning.html#luchador.nn.theano.q_learning.DeepQLearning.build">(luchador.nn.theano.q_learning.DeepQLearning method)</a>
 </li>
       </ul></li>
       <li><a href="API/luchador.nn.tensorflow.misc.html#luchador.nn.tensorflow.misc.build_sync_op">build_sync_op() (in module luchador.nn.tensorflow.misc)</a>
@@ -388,22 +382,18 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="API/luchador.nn.tensorflow.q_learning.html#luchador.nn.tensorflow.q_learning.DeepQLearning">DeepQLearning (class in luchador.nn.tensorflow.q_learning)</a>
-
-      <ul>
-        <li><a href="API/luchador.nn.theano.q_learning.html#luchador.nn.theano.q_learning.DeepQLearning">(class in luchador.nn.theano.q_learning)</a>
+      <li><a href="API/luchador.agent.rl.q_learning.html#luchador.agent.rl.q_learning.DeepQLearning">DeepQLearning (class in luchador.agent.rl.q_learning)</a>
 </li>
-      </ul></li>
       <li><a href="API/luchador.nn.tensorflow.layer.html#luchador.nn.tensorflow.layer.Dense">Dense (class in luchador.nn.tensorflow.layer)</a>
 
       <ul>
         <li><a href="API/luchador.nn.theano.layer.html#luchador.nn.theano.layer.Dense">(class in luchador.nn.theano.layer)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.env.remote.util.html#luchador.env.remote.util.deserialize_outcome">deserialize_outcome() (in module luchador.env.remote.util)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Attribute.disable">disable() (luchador.util.render.Attribute method)</a>
 
       <ul>
@@ -696,6 +686,10 @@
 </li>
       <li><a href="API/luchador.agent.recorder.html#module-luchador.agent.recorder">luchador.agent.recorder (module)</a>
 </li>
+      <li><a href="API/luchador.agent.rl.html#module-luchador.agent.rl">luchador.agent.rl (module)</a>
+</li>
+      <li><a href="API/luchador.agent.rl.q_learning.html#module-luchador.agent.rl.q_learning">luchador.agent.rl.q_learning (module)</a>
+</li>
       <li><a href="API/luchador.command.html#module-luchador.command">luchador.command (module)</a>
 </li>
       <li><a href="API/luchador.command.exercise.html#module-luchador.command.exercise">luchador.command.exercise (module)</a>
@@ -728,12 +722,12 @@
 </li>
       <li><a href="API/luchador.env.flappy_bird.fb_util.html#module-luchador.env.flappy_bird.fb_util">luchador.env.flappy_bird.fb_util (module)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.env.flappy_bird.flappy_bird.html#module-luchador.env.flappy_bird.flappy_bird">luchador.env.flappy_bird.flappy_bird (module)</a>
 </li>
       <li><a href="API/luchador.env.remote.html#module-luchador.env.remote">luchador.env.remote (module)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.env.remote.client.html#module-luchador.env.remote.client">luchador.env.remote.client (module)</a>
 </li>
       <li><a href="API/luchador.env.remote.manager.html#module-luchador.env.remote.manager">luchador.env.remote.manager (module)</a>
@@ -755,8 +749,6 @@
       <li><a href="API/luchador.nn.base.layer.html#module-luchador.nn.base.layer">luchador.nn.base.layer (module)</a>
 </li>
       <li><a href="API/luchador.nn.base.optimizer.html#module-luchador.nn.base.optimizer">luchador.nn.base.optimizer (module)</a>
-</li>
-      <li><a href="API/luchador.nn.base.q_learning.html#module-luchador.nn.base.q_learning">luchador.nn.base.q_learning (module)</a>
 </li>
       <li><a href="API/luchador.nn.base.session.html#module-luchador.nn.base.session">luchador.nn.base.session (module)</a>
 </li>
@@ -784,8 +776,6 @@
 </li>
       <li><a href="API/luchador.nn.tensorflow.optimizer.html#module-luchador.nn.tensorflow.optimizer">luchador.nn.tensorflow.optimizer (module)</a>
 </li>
-      <li><a href="API/luchador.nn.tensorflow.q_learning.html#module-luchador.nn.tensorflow.q_learning">luchador.nn.tensorflow.q_learning (module)</a>
-</li>
       <li><a href="API/luchador.nn.tensorflow.scope.html#module-luchador.nn.tensorflow.scope">luchador.nn.tensorflow.scope (module)</a>
 </li>
       <li><a href="API/luchador.nn.tensorflow.session.html#module-luchador.nn.tensorflow.session">luchador.nn.tensorflow.session (module)</a>
@@ -803,8 +793,6 @@
       <li><a href="API/luchador.nn.theano.misc.html#module-luchador.nn.theano.misc">luchador.nn.theano.misc (module)</a>
 </li>
       <li><a href="API/luchador.nn.theano.optimizer.html#module-luchador.nn.theano.optimizer">luchador.nn.theano.optimizer (module)</a>
-</li>
-      <li><a href="API/luchador.nn.theano.q_learning.html#module-luchador.nn.theano.q_learning">luchador.nn.theano.q_learning (module)</a>
 </li>
       <li><a href="API/luchador.nn.theano.random.html#module-luchador.nn.theano.random">luchador.nn.theano.random (module)</a>
 </li>
@@ -944,10 +932,10 @@
 </li>
       <li><a href="API/luchador.env.flappy_bird.fb_component.html#luchador.env.flappy_bird.fb_component.Pipes">Pipes (class in luchador.env.flappy_bird.fb_component)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.env.flappy_bird.fb_component.html#luchador.env.flappy_bird.fb_component.Player">Player (class in luchador.env.flappy_bird.fb_component)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Point">Point (class in luchador.util.render)</a>
 </li>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Polygon">Polygon (class in luchador.util.render)</a>
@@ -955,6 +943,8 @@
       <li><a href="API/luchador.util.render.html#luchador.util.render.PolyLine">PolyLine (class in luchador.util.render)</a>
 </li>
       <li><a href="API/luchador.util.yaml_util.html#luchador.util.yaml_util.pprint_dict">pprint_dict() (in module luchador.util.yaml_util)</a>
+</li>
+      <li><a href="API/luchador.agent.rl.q_learning.html#luchador.agent.rl.q_learning.DeepQLearning.predict_action_value">predict_action_value() (luchador.agent.rl.q_learning.DeepQLearning method)</a>
 </li>
       <li><a href="API/luchador.agent.recorder.html#luchador.agent.recorder.Buffer.put">put() (luchador.agent.recorder.Buffer method)</a>
 
@@ -1062,8 +1052,12 @@
         <li><a href="API/luchador.nn.base.initializer.html#luchador.nn.base.initializer.BaseInitializer.sample">(luchador.nn.base.initializer.BaseInitializer method)</a>
 </li>
       </ul></li>
-      <li><a href="API/luchador.nn.saver.html#luchador.nn.saver.Saver.save">save() (luchador.nn.saver.Saver method)</a>
+      <li><a href="API/luchador.agent.rl.q_learning.html#luchador.agent.rl.q_learning.DeepQLearning.save">save() (luchador.agent.rl.q_learning.DeepQLearning method)</a>
+
+      <ul>
+        <li><a href="API/luchador.nn.saver.html#luchador.nn.saver.Saver.save">(luchador.nn.saver.Saver method)</a>
 </li>
+      </ul></li>
       <li><a href="API/luchador.nn.saver.html#luchador.nn.saver.Saver">Saver (class in luchador.nn.saver)</a>
 </li>
       <li><a href="API/luchador.nn.model.model.html#luchador.nn.model.model.Sequential">Sequential (class in luchador.nn.model.model)</a>
@@ -1108,12 +1102,12 @@
 </li>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Transform.set_rotation">set_rotation() (luchador.util.render.Transform method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Transform.set_scale">set_scale() (luchador.util.render.Transform method)</a>
 </li>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Renderer.set_transform">set_transform() (luchador.util.render.Renderer method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Transform.set_translation">set_translation() (luchador.util.render.Transform method)</a>
 </li>
       <li><a href="API/luchador.nn.tensorflow.optimizer.html#luchador.nn.tensorflow.optimizer.SGD">SGD (class in luchador.nn.tensorflow.optimizer)</a>
@@ -1170,9 +1164,19 @@
 </li>
       <li><a href="API/luchador.nn.summary.html#luchador.nn.summary.SummaryWriter.summarize">summarize() (luchador.nn.summary.SummaryWriter method)</a>
 </li>
-      <li><a href="API/luchador.nn.summary.html#luchador.nn.summary.SummaryWriter.summarize_stats">summarize_stats() (luchador.nn.summary.SummaryWriter method)</a>
+      <li><a href="API/luchador.agent.rl.q_learning.html#luchador.agent.rl.q_learning.DeepQLearning.summarize_layer_outputs">summarize_layer_outputs() (luchador.agent.rl.q_learning.DeepQLearning method)</a>
 </li>
+      <li><a href="API/luchador.agent.rl.q_learning.html#luchador.agent.rl.q_learning.DeepQLearning.summarize_layer_params">summarize_layer_params() (luchador.agent.rl.q_learning.DeepQLearning method)</a>
+</li>
+      <li><a href="API/luchador.agent.rl.q_learning.html#luchador.agent.rl.q_learning.DeepQLearning.summarize_stats">summarize_stats() (luchador.agent.rl.q_learning.DeepQLearning method)</a>
+
+      <ul>
+        <li><a href="API/luchador.nn.summary.html#luchador.nn.summary.SummaryWriter.summarize_stats">(luchador.nn.summary.SummaryWriter method)</a>
+</li>
+      </ul></li>
       <li><a href="API/luchador.nn.summary.html#luchador.nn.summary.SummaryWriter">SummaryWriter (class in luchador.nn.summary)</a>
+</li>
+      <li><a href="API/luchador.agent.rl.q_learning.html#luchador.agent.rl.q_learning.DeepQLearning.sync_network">sync_network() (luchador.agent.rl.q_learning.DeepQLearning method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1186,6 +1190,8 @@
         <li><a href="API/luchador.nn.theano.wrapper.html#luchador.nn.theano.wrapper.Tensor">(class in luchador.nn.theano.wrapper)</a>
 </li>
       </ul></li>
+      <li><a href="API/luchador.agent.rl.q_learning.html#luchador.agent.rl.q_learning.DeepQLearning.train">train() (luchador.agent.rl.q_learning.DeepQLearning method)</a>
+</li>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Transform">Transform (class in luchador.util.render)</a>
 </li>
   </ul></td>
