[skip ci] 1f1085dff6b9cb9abbc329d59c1c1da1860e9bb1 Add get_tensor mechanism (#156)

--- a/html/genindex.html
+++ b/html/genindex.html
@@ -266,10 +266,10 @@
 </li>
       <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.BaseOptimizer">BaseOptimizer (class in luchador.nn.base.optimizer)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseReLU">BaseReLU (class in luchador.nn.base.layer)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.BaseRMSProp">BaseRMSProp (class in luchador.nn.base.optimizer)</a>
 </li>
       <li><a href="API/luchador.nn.base.session.html#luchador.nn.base.session.BaseSession">BaseSession (class in luchador.nn.base.session)</a>
@@ -293,6 +293,10 @@
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseTrueDiv">BaseTrueDiv (class in luchador.nn.base.layer)</a>
 </li>
       <li><a href="API/luchador.nn.base.initializer.html#luchador.nn.base.initializer.BaseUniform">BaseUniform (class in luchador.nn.base.initializer)</a>
+</li>
+      <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.BaseVariable">BaseVariable (class in luchador.nn.base.wrapper)</a>
+</li>
+      <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.BaseWrapper">BaseWrapper (class in luchador.nn.base.wrapper)</a>
 </li>
       <li><a href="API/luchador.nn.base.initializer.html#luchador.nn.base.initializer.BaseXavier">BaseXavier (class in luchador.nn.base.initializer)</a>
 </li>
@@ -510,10 +514,10 @@
 </li>
       <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.get_optimizer">get_optimizer() (in module luchador.nn.base.optimizer)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.nn.model.model.html#luchador.nn.model.model.Sequential.get_output_tensors">get_output_tensors() (luchador.nn.model.model.Sequential method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.BaseOptimizer.get_parameter_variables">get_parameter_variables() (luchador.nn.base.optimizer.BaseOptimizer method)</a>
 
       <ul>
@@ -525,6 +529,8 @@
       <li><a href="API/luchador.env.ale.ale.html#luchador.env.ale.ale.ALEEnvironment.get_roms">get_roms() (luchador.env.ale.ale.ALEEnvironment static method)</a>
 </li>
       <li><a href="API/luchador.util.misc.html#luchador.util.misc.get_subclasses">get_subclasses() (in module luchador.util.misc)</a>
+</li>
+      <li><a href="API/luchador.nn.theano.scope.html#luchador.nn.theano.scope.get_tensor">get_tensor() (in module luchador.nn.theano.scope)</a>
 </li>
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseLayer.get_update_operation">get_update_operation() (luchador.nn.base.layer.BaseLayer method)</a>
 </li>
@@ -852,7 +858,7 @@
         <li><a href="API/luchador.env.remote.client.html#luchador.env.remote.client.RemoteEnv.n_actions">(luchador.env.remote.client.RemoteEnv attribute)</a>
 </li>
       </ul></li>
-      <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.BaseTensor.n_dim">n_dim (luchador.nn.base.wrapper.BaseTensor attribute)</a>
+      <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.BaseWrapper.n_dim">n_dim (luchador.nn.base.wrapper.BaseWrapper attribute)</a>
 </li>
       <li><a href="API/luchador.agent.recorder.html#luchador.agent.recorder.TransitionRecorder.n_records">n_records (luchador.agent.recorder.TransitionRecorder attribute)</a>
 </li>
@@ -968,8 +974,12 @@
 </li>
       <li><a href="API/luchador.agent.recorder.html#luchador.agent.recorder.TransitionRecorder.record">record() (luchador.agent.recorder.TransitionRecorder method)</a>
 </li>
-      <li><a href="API/luchador.nn.summary.html#luchador.nn.summary.SummaryWriter.register">register() (luchador.nn.summary.SummaryWriter method)</a>
+      <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.BaseTensor.register">register() (luchador.nn.base.wrapper.BaseTensor method)</a>
+
+      <ul>
+        <li><a href="API/luchador.nn.summary.html#luchador.nn.summary.SummaryWriter.register">(luchador.nn.summary.SummaryWriter method)</a>
 </li>
+      </ul></li>
       <li><a href="API/luchador.nn.summary.html#luchador.nn.summary.SummaryWriter.register_stats">register_stats() (luchador.nn.summary.SummaryWriter method)</a>
 </li>
       <li><a href="API/luchador.nn.tensorflow.layer.html#luchador.nn.tensorflow.layer.ReLU">ReLU (class in luchador.nn.tensorflow.layer)</a>
@@ -1080,7 +1090,7 @@
         <li><a href="API/luchador.nn.theano.session.html#luchador.nn.theano.session.Session">(class in luchador.nn.theano.session)</a>
 </li>
       </ul></li>
-      <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.BaseTensor.set">set() (luchador.nn.base.wrapper.BaseTensor method)</a>
+      <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.BaseWrapper.set">set() (luchador.nn.base.wrapper.BaseWrapper method)</a>
 </li>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Color.set_color">set_color() (luchador.util.render.Color method)</a>
 
@@ -1130,7 +1140,7 @@
         <li><a href="API/luchador.nn.theano.cost.html#luchador.nn.theano.cost.SigmoidCrossEntropy">(class in luchador.nn.theano.cost)</a>
 </li>
       </ul></li>
-      <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.BaseTensor.size">size (luchador.nn.base.wrapper.BaseTensor attribute)</a>
+      <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.BaseWrapper.size">size (luchador.nn.base.wrapper.BaseWrapper attribute)</a>
 </li>
       <li><a href="API/luchador.nn.tensorflow.layer.html#luchador.nn.tensorflow.layer.Softmax">Softmax (class in luchador.nn.tensorflow.layer)</a>
 
@@ -1212,7 +1222,7 @@
         <li><a href="API/luchador.nn.theano.initializer.html#luchador.nn.theano.initializer.Uniform">(class in luchador.nn.theano.initializer)</a>
 </li>
       </ul></li>
-      <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.BaseTensor.unwrap">unwrap() (luchador.nn.base.wrapper.BaseTensor method)</a>
+      <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.BaseWrapper.unwrap">unwrap() (luchador.nn.base.wrapper.BaseWrapper method)</a>
 
       <ul>
         <li><a href="API/luchador.nn.base.wrapper.html#luchador.nn.base.wrapper.Operation.unwrap">(luchador.nn.base.wrapper.Operation method)</a>
