--- a/html/genindex.html
+++ b/html/genindex.html
@@ -530,8 +530,12 @@
 </li>
       <li><a href="API/luchador.util.misc.html#luchador.util.misc.get_subclasses">get_subclasses() (in module luchador.util.misc)</a>
 </li>
-      <li><a href="API/luchador.nn.theano.scope.html#luchador.nn.theano.scope.get_tensor">get_tensor() (in module luchador.nn.theano.scope)</a>
+      <li><a href="API/luchador.nn.tensorflow.scope.html#luchador.nn.tensorflow.scope.get_tensor">get_tensor() (in module luchador.nn.tensorflow.scope)</a>
+
+      <ul>
+        <li><a href="API/luchador.nn.theano.scope.html#luchador.nn.theano.scope.get_tensor">(in module luchador.nn.theano.scope)</a>
 </li>
+      </ul></li>
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseLayer.get_update_operation">get_update_operation() (luchador.nn.base.layer.BaseLayer method)</a>
 </li>
       <li><a href="API/luchador.nn.model.model.html#luchador.nn.model.model.Sequential.get_update_operations">get_update_operations() (luchador.nn.model.model.Sequential method)</a>
