[skip ci] c0120d493c8a28c34f8220e93cedea0a7c169573 Update format (#160)

--- a/html/genindex.html
+++ b/html/genindex.html
@@ -204,7 +204,7 @@
 </li>
       <li><a href="API/luchador.nn.summary.html#luchador.nn.summary.SummaryWriter.add_graph">add_graph() (luchador.nn.summary.SummaryWriter method)</a>
 </li>
-      <li><a href="API/luchador.nn.model.model.html#luchador.nn.model.model.Sequential.add_layer">add_layer() (luchador.nn.model.model.Sequential method)</a>
+      <li><a href="API/luchador.nn.model.sequential.html#luchador.nn.model.sequential.Sequential.add_layer">add_layer() (luchador.nn.model.sequential.Sequential method)</a>
 </li>
       <li><a href="API/luchador.env.flappy_bird.fb_component.html#luchador.env.flappy_bird.fb_component.Pipes.add_pipe">add_pipe() (luchador.env.flappy_bird.fb_component.Pipes method)</a>
 </li>
@@ -254,7 +254,7 @@
 </li>
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseLayer">BaseLayer (class in luchador.nn.base.layer)</a>
 </li>
-      <li><a href="API/luchador.nn.model.model.html#luchador.nn.model.model.BaseModel">BaseModel (class in luchador.nn.model.model)</a>
+      <li><a href="API/luchador.nn.model.base_model.html#luchador.nn.model.base_model.BaseModel">BaseModel (class in luchador.nn.model.base_model)</a>
 </li>
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseNCHW2NHWC">BaseNCHW2NHWC (class in luchador.nn.base.layer)</a>
 </li>
@@ -315,7 +315,7 @@
 </li>
         <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseLayer.build">(luchador.nn.base.layer.BaseLayer method)</a>
 </li>
-        <li><a href="API/luchador.nn.model.model.html#luchador.nn.model.model.Sequential.build">(luchador.nn.model.model.Sequential method)</a>
+        <li><a href="API/luchador.nn.model.sequential.html#luchador.nn.model.sequential.Sequential.build">(luchador.nn.model.sequential.Sequential method)</a>
 </li>
       </ul></li>
       <li><a href="API/luchador.nn.tensorflow.misc.html#luchador.nn.tensorflow.misc.build_sync_op">build_sync_op() (in module luchador.nn.tensorflow.misc)</a>
@@ -502,7 +502,7 @@
       </ul></li>
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.get_layer">get_layer() (in module luchador.nn.base.layer)</a>
 </li>
-      <li><a href="API/luchador.nn.model.model.html#luchador.nn.model.model.get_model">get_model() (in module luchador.nn.model.model)</a>
+      <li><a href="API/luchador.nn.model.base_model.html#luchador.nn.model.base_model.get_model">get_model() (in module luchador.nn.model.base_model)</a>
 </li>
       <li><a href="API/luchador.nn.model.util.html#luchador.nn.model.util.get_model_config">get_model_config() (in module luchador.nn.model.util)</a>
 </li>
@@ -514,14 +514,14 @@
 </li>
       <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.get_optimizer">get_optimizer() (in module luchador.nn.base.optimizer)</a>
 </li>
-      <li><a href="API/luchador.nn.model.model.html#luchador.nn.model.model.Sequential.get_output_tensors">get_output_tensors() (luchador.nn.model.model.Sequential method)</a>
+      <li><a href="API/luchador.nn.model.sequential.html#luchador.nn.model.sequential.Sequential.get_output_tensors">get_output_tensors() (luchador.nn.model.sequential.Sequential method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.BaseOptimizer.get_parameter_variables">get_parameter_variables() (luchador.nn.base.optimizer.BaseOptimizer method)</a>
 
       <ul>
-        <li><a href="API/luchador.nn.model.model.html#luchador.nn.model.model.Sequential.get_parameter_variables">(luchador.nn.model.model.Sequential method)</a>
+        <li><a href="API/luchador.nn.model.sequential.html#luchador.nn.model.sequential.Sequential.get_parameter_variables">(luchador.nn.model.sequential.Sequential method)</a>
 </li>
       </ul></li>
       <li><a href="API/luchador.nn.theano.random.html#luchador.nn.theano.random.get_rng">get_rng() (in module luchador.nn.theano.random)</a>
@@ -538,7 +538,7 @@
       </ul></li>
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseLayer.get_update_operation">get_update_operation() (luchador.nn.base.layer.BaseLayer method)</a>
 </li>
-      <li><a href="API/luchador.nn.model.model.html#luchador.nn.model.model.Sequential.get_update_operations">get_update_operations() (luchador.nn.model.model.Sequential method)</a>
+      <li><a href="API/luchador.nn.model.sequential.html#luchador.nn.model.sequential.Sequential.get_update_operations">get_update_operations() (luchador.nn.model.sequential.Sequential method)</a>
 </li>
       <li><a href="API/luchador.nn.tensorflow.scope.html#luchador.nn.tensorflow.scope.get_variable">get_variable() (in module luchador.nn.tensorflow.scope)</a>
 
@@ -772,7 +772,9 @@
 </li>
       <li><a href="API/luchador.nn.model.html#module-luchador.nn.model">luchador.nn.model (module)</a>
 </li>
-      <li><a href="API/luchador.nn.model.model.html#module-luchador.nn.model.model">luchador.nn.model.model (module)</a>
+      <li><a href="API/luchador.nn.model.base_model.html#module-luchador.nn.model.base_model">luchador.nn.model.base_model (module)</a>
+</li>
+      <li><a href="API/luchador.nn.model.sequential.html#module-luchador.nn.model.sequential">luchador.nn.model.sequential (module)</a>
 </li>
       <li><a href="API/luchador.nn.model.util.html#module-luchador.nn.model.util">luchador.nn.model.util (module)</a>
 </li>
@@ -1076,9 +1078,9 @@
 </li>
       <li><a href="API/luchador.nn.saver.html#luchador.nn.saver.Saver">Saver (class in luchador.nn.saver)</a>
 </li>
-      <li><a href="API/luchador.nn.model.model.html#luchador.nn.model.model.Sequential">Sequential (class in luchador.nn.model.model)</a>
+      <li><a href="API/luchador.nn.model.sequential.html#luchador.nn.model.sequential.Sequential">Sequential (class in luchador.nn.model.sequential)</a>
 </li>
-      <li><a href="API/luchador.nn.model.model.html#luchador.nn.model.model.Sequential.serialize">serialize() (luchador.nn.model.model.Sequential method)</a>
+      <li><a href="API/luchador.nn.model.sequential.html#luchador.nn.model.sequential.Sequential.serialize">serialize() (luchador.nn.model.sequential.Sequential method)</a>
 
       <ul>
         <li><a href="API/luchador.util.mixin.html#luchador.util.mixin.SerializeMixin.serialize">(luchador.util.mixin.SerializeMixin method)</a>
