[skip ci] e4f9a003a7fd1262a02ceb9d352edee3ed716158 Add Mean, Add and Sub layers (#164)

--- a/html/genindex.html
+++ b/html/genindex.html
@@ -198,6 +198,12 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="API/luchador.nn.tensorflow.layer.html#luchador.nn.tensorflow.layer.Add">Add (class in luchador.nn.tensorflow.layer)</a>
+
+      <ul>
+        <li><a href="API/luchador.nn.theano.layer.html#luchador.nn.theano.layer.Add">(class in luchador.nn.theano.layer)</a>
+</li>
+      </ul></li>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Geometry.add_attr">add_attr() (luchador.util.render.Geometry method)</a>
 </li>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Renderer.add_geometry">add_geometry() (luchador.util.render.Renderer method)</a>
@@ -228,6 +234,8 @@
 </li>
       <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.BaseAdamax">BaseAdamax (class in luchador.nn.base.optimizer)</a>
 </li>
+      <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseAdd">BaseAdd (class in luchador.nn.base.layer)</a>
+</li>
       <li><a href="API/luchador.agent.base.html#luchador.agent.base.BaseAgent">BaseAgent (class in luchador.agent.base)</a>
 </li>
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseBatchNormalization">BaseBatchNormalization (class in luchador.nn.base.layer)</a>
@@ -254,6 +262,8 @@
 </li>
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseLayer">BaseLayer (class in luchador.nn.base.layer)</a>
 </li>
+      <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseMean">BaseMean (class in luchador.nn.base.layer)</a>
+</li>
       <li><a href="API/luchador.nn.model.base_model.html#luchador.nn.model.base_model.BaseModel">BaseModel (class in luchador.nn.model.base_model)</a>
 </li>
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseNCHW2NHWC">BaseNCHW2NHWC (class in luchador.nn.base.layer)</a>
@@ -266,10 +276,10 @@
 </li>
       <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.BaseOptimizer">BaseOptimizer (class in luchador.nn.base.optimizer)</a>
 </li>
-      <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseReLU">BaseReLU (class in luchador.nn.base.layer)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseReLU">BaseReLU (class in luchador.nn.base.layer)</a>
+</li>
       <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.BaseRMSProp">BaseRMSProp (class in luchador.nn.base.optimizer)</a>
 </li>
       <li><a href="API/luchador.nn.base.session.html#luchador.nn.base.session.BaseSession">BaseSession (class in luchador.nn.base.session)</a>
@@ -285,6 +295,8 @@
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseSoftplus">BaseSoftplus (class in luchador.nn.base.layer)</a>
 </li>
       <li><a href="API/luchador.nn.base.cost.html#luchador.nn.base.cost.BaseSSE2">BaseSSE2 (class in luchador.nn.base.cost)</a>
+</li>
+      <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseSub">BaseSub (class in luchador.nn.base.layer)</a>
 </li>
       <li><a href="API/luchador.nn.base.layer.html#luchador.nn.base.layer.BaseTanh">BaseTanh (class in luchador.nn.base.layer)</a>
 </li>
@@ -838,6 +850,12 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.nn.model.util.html#luchador.nn.model.util.make_model">make_model() (in module luchador.nn.model.util)</a>
 </li>
+      <li><a href="API/luchador.nn.tensorflow.layer.html#luchador.nn.tensorflow.layer.Mean">Mean (class in luchador.nn.tensorflow.layer)</a>
+
+      <ul>
+        <li><a href="API/luchador.nn.theano.layer.html#luchador.nn.theano.layer.Mean">(class in luchador.nn.theano.layer)</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.nn.base.optimizer.html#luchador.nn.base.optimizer.BaseOptimizer.minimize">minimize() (luchador.nn.base.optimizer.BaseOptimizer method)</a>
@@ -1118,10 +1136,10 @@
 </li>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Transform.set_scale">set_scale() (luchador.util.render.Transform method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Renderer.set_transform">set_transform() (luchador.util.render.Renderer method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="API/luchador.util.render.html#luchador.util.render.Transform.set_translation">set_translation() (luchador.util.render.Transform method)</a>
 </li>
       <li><a href="API/luchador.nn.tensorflow.optimizer.html#luchador.nn.tensorflow.optimizer.SGD">SGD (class in luchador.nn.tensorflow.optimizer)</a>
@@ -1176,6 +1194,12 @@
       </ul></li>
       <li><a href="API/luchador.util.mixin.html#luchador.util.mixin.StoreMixin">StoreMixin (class in luchador.util.mixin)</a>
 </li>
+      <li><a href="API/luchador.nn.tensorflow.layer.html#luchador.nn.tensorflow.layer.Sub">Sub (class in luchador.nn.tensorflow.layer)</a>
+
+      <ul>
+        <li><a href="API/luchador.nn.theano.layer.html#luchador.nn.theano.layer.Sub">(class in luchador.nn.theano.layer)</a>
+</li>
+      </ul></li>
       <li><a href="API/luchador.nn.summary.html#luchador.nn.summary.SummaryWriter.summarize">summarize() (luchador.nn.summary.SummaryWriter method)</a>
 </li>
       <li><a href="API/luchador.nn.summary.html#luchador.nn.summary.SummaryWriter.summarize_stats">summarize_stats() (luchador.nn.summary.SummaryWriter method)</a>
